--- a/apps/frontend/the-queue/src/App.css
+++ b/apps/frontend/the-queue/src/App.css
@@ -1,42 +1,50 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  font-family: 'Noto Sans', sans-serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#main{
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+#feed{
+  flex: 1;
+  border-width: 0px 2px;
+  border-style: solid;
+  border-color: #000000;
+  max-width: 600px;
+  padding: 10px;
+  min-height: 100vh;
+  box-sizing: border-box;
+  background-color: #F4C3A4;
+}
+nav{
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+nav > a{
+  display: block;
+  width: 310px;
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  padding: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+nav > a:hover{
+  font-weight: 700;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+nav > a > img{
+  padding-right: 30px;
 }
